--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue02",
+  "name": "vue03",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,32 +8,41 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/runtime-dom": "^3.5.0",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "echarts": "^5.5.1",
-    "element-ui": "^2.15.14",
+    "element-plus": "^2.8.0",
     "flv.js": "^1.6.2",
     "hls.js": "^1.5.15",
     "lib-flexible": "^0.3.2",
+    "pinia": "^3.0.4",
+    "typescript": "^5.0.0",
     "video.js": "^8.17.4",
     "videojs-flash": "^2.2.1",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue": "^3.5.0",
+    "vue-router": "^4.4.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/node": "^20.0.0",
+    "@types/webpack": "^5.0.0",
+    "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.5.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.0.0",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "less-loader": "^8.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -41,13 +50,22 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@typescript-eslint/parser",
+      "ecmaVersion": 2020,
+      "sourceType": "module"
     },
-    "rules": {}
+    "plugins": [
+      "vue",
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "vue/multi-word-component-names": "off",
+      "@typescript-eslint/no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
