加了点说明，前端有个依赖版本低了升级了一下hhh

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -7,7 +7,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/SweatPear?serverTimezone=GMT%2B8&rewriteBatchedStatements=true&tinyInt1isBit=false
     username: root
-    password: '050130'
+    # 数据库密码 自己改成自己电脑的密码，后面建议写上是谁的别搞混了
+    # password: '050130' # 默认
+    password: fast2005 # 冯博轩
     druid:
       initial-size: 5
       min-idle: 10
@@ -42,7 +44,9 @@ spring:
           min-idle: 0
           # 连接超时时间（毫秒）默认是2000ms
           timeout: 10000ms
-      password: 123456
+      # redis密码 自己改成自己电脑的密码，后面建议写上是谁的别搞混了
+      # password: 123456  # 默认
+      password: # 冯博轩
   cache:
     type: redis
     redis:
